// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Logo test cases Should render logo 1`] = `
<DocumentFragment>
  <header
    class="css-10czark"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;

exports[`Logo test cases Should render logo with custom size 1`] = `
<DocumentFragment>
  <header
    class="css-wj6nq5"
    size="5"
  >
    CoursesBox
  </header>
</DocumentFragment>
`;
